# ZZ

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
docs/: backend.md  frontend-features.md
frontend/: package-lock.json  package.json
frontend/src/: app.css  editorStores.ts
frontend/src/lib/components/: CodeMirror.svelte  CodeSnippet.svelte  CoursesNav.svelte  Exercise.svelte  Navbar.svelte  OutputWindow.svelte  ProblemTable.svelte
frontend/src/lib/components/buttons/: ExecuteButton.svelte  NextButton.svelte  PreviousButton.svelte  RunButton.svelte  SubmitButton.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/courses/: +layout.svelte  +page.svelte  courses.css
frontend/src/routes/courses/cpp/: +layout.svelte  +page.svelte
frontend/src/routes/courses/cpp/functions/: +page.svelte
frontend/src/routes/courses/cpp/hello_world/: +page.svelte
frontend/src/routes/courses/cpp/variables/: +page.svelte
frontend/src/routes/courses/css/: +layout.svelte  +page.svelte
frontend/src/routes/courses/html/: +layout.svelte  +page.svelte
frontend/src/routes/courses/html/hello_world/: +page.svelte
frontend/src/routes/courses/python/: +layout.svelte
frontend/src/routes/playground/: +page.svelte
frontend/src/routes/problems/: +page.svelte
frontend/src/routes/problems/[name]/: +page.svelte
frontend/src/routes/sfy/: +layout.svelte  +page.svelte
