[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.39.0"
axum = "0.8.1"
bytes = "1.10.0"
futures = "0.3.31"
serde = "1.0.218"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
